Added image and published draft

--- a/_posts/2022-04-13-log-debug.md
+++ b/_posts/2022-04-13-log-debug.md
@@ -6,7 +6,7 @@ categories: dotnet csharp
 comments: true
 ---
 
-When debugging time-sensitive applications, multithreaded applications or applications with components running in different processes, the act of placing a breakpoint can change (or break) the that the application runs. In these scenarios it can be useful to fall back to the old school way of doing things - log it out.
+When debugging time-sensitive applications, multithreaded applications or applications with components running in different processes, the act of placing a breakpoint can change (or break) the way that the application runs. In these scenarios it can be useful to fall back to the old school way of doing things - log it out.
 
 Here's a guide on how to log Debug info to a file in Visual Studio.
 
@@ -26,7 +26,7 @@ That's great, but the Debug window buffer only has some many lines, and the outp
 
 The Debug output itself can't be saved, but the Immediate window can be. If only there was a way to copy the Debug output to the Immediate window...
 
-!Insert Screenshot here!
+![Setting to enable output to Immediate Window]({{ site.url }}/assets/images/output-to-immediate-setting.png)
 
 A bit of a weird setting to have, but useful!
 
@@ -44,7 +44,7 @@ This will start the logging operation. Everything that's output (or input) into 
 
 NOTE: The `>` is required! It signifies that this is a [Visual Studio Command](https://docs.microsoft.com/en-gb/visualstudio/ide/reference/visual-studio-commands), rather than a debug operation.
 
-The filename is optional. If you don't specify a filename, the log file will be created in the user's profile folder with the name cmdline.log. If a file with the same already exists, new log info will be appended to the end of the existing file.
+The filename is optional. If you don't specify a filename, the log file will be created in your user's profile folder with the name cmdline.log. If a file with the same already exists, new log lines will be appended to the end of the existing file.
 
 The `/on` flag starts the logging. The `/off` flag stops the logging:
 
