categories to tags and added permalinks

--- a/_posts/2016-09-01-safe-mode.md
+++ b/_posts/2016-09-01-safe-mode.md
@@ -2,8 +2,9 @@
 layout: post
 title: "What to do when your graphics drivers fail in Windows 10"
 date: 2016-09-01 19:26:12
-categories: windows hardware
+tags: windows hardware
 comments: true
+permalink: "/windows/hardware/2016/09/01/safe-mode.html"
 ---
 
 Keeping Windows up to date is normally a good idea. Keeps your system secure and blah, blah, blah...
