--- a/_posts/2022-04-13-log-debug.md
+++ b/_posts/2022-04-13-log-debug.md
@@ -2,8 +2,9 @@
 layout: post
 title: "Save debug info to file in Visual Studio"
 date: 2022-04-13 21:55:00
-categories: dotnet csharp
+tags: dotnet csharp
 comments: true
+permalink: "/dotnet/csharp/2022/04/13/log-debug.html"
 ---
 
 When debugging time-sensitive applications, multithreaded applications or applications with components running in different processes, the act of placing a breakpoint can change (or break) the way that the application runs. In these scenarios it can be useful to fall back to the old school way of doing things - log it out.
